--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/test_db
+spring.datasource.username=admin
+spring.datasource.password=admin
+
 rest.endpoint=https://jsonplaceholder.typicode.com
 
 selenium.email=aron.hosszu@accesa.eu
