--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.workspace</groupId>
-    <artifactId>testproject</artifactId>
+    <artifactId>springboot-framework</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>testproject</name>
-    <description>Demo project for Spring Boot</description>
+    <name>springboot-framework</name>
+    <description>Testing framework in Spring Boot</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -63,6 +63,7 @@
             <version>6.14.3</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -73,6 +74,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
